# Basic-knowledge-of-ROS

./: .ycm_extra_conf.py  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/: CMakeLists.txt  gazebo颜色标签
src/action_homework/: CMakeLists.txt
src/delta_lidar/: CMakeLists.txt  ROS中激光雷达数据格式  package.xml
src/delta_lidar/launch/: delta_lidar.launch  slam.launch
src/delta_lidar/src/: client.cpp  distance_sub.cpp  node.cpp
src/learn_timers/: CMakeLists.txt
src/learning_action/: CMakeLists.txt  package.xml
src/learning_action2/: CMakeLists.txt  package.xml
src/learning_cplus_lei/: CMakeLists.txt
src/learning_cplus_lei2/: CMakeLists.txt  package.xml
src/learning_cplus_namespace/: CMakeLists.txt  package.xml
src/learning_multithread/: CMakeLists.txt  package.xml
src/learning_parameter/: CMakeLists.txt  package.xml
src/learning_service/: CMakeLists.txt  package.xml
src/learning_tf/: CMakeLists.txt
src/learning_topic/: CMakeLists.txt
src/marm_ikfast_arm_plugin/: CMakeLists.txt  marm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/marm_moveit_config/: .setup_assistant
src/may_arm/: CMakeLists.txt  package.xml
src/myarm/: CMakeLists.txt  package.xml  urdf.rviz
src/myarm_ikfast_left_arm_plugin/: CMakeLists.txt  myarm_left_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/myarm_ikfast_right_arm_plugin/: CMakeLists.txt  myarm_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/myarm_moveit_config/: .setup_assistant  (+1 more)
(+645 files in other folders)
